cmake_minimum_required(VERSION 2.8)
project(lowertriad)
if(APPLE)
  include_directories(/usr/local/include/)
  link_directories(/usr/local/lib/)
endif(APPLE)
add_executable(lowertriad-make src/ide/make.cpp)
add_executable(lowertriad-test src/engine/engine.cpp)
add_executable(lowertriad-ide src/ide/main.cpp)
target_link_libraries(lowertriad-ide SDL2)
